--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 	<!-- Authors Prajodh Aniyeri Valikat-->
 	<!-- CIS 5611 Fall 2020 - Individual Project -->	
 	<head>
-		<title>Functions</title>
+		<title>About</title>
 	
 		<meta charset="UTF-8">
 		<meta name="description" content="Individual Project - CIS 5611">
@@ -21,7 +21,7 @@
 		<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" ></script>
 		<!-- Custom Project JS LINK -->
 		<script type="text/javascript" src="js/common.js"></script>
-	    <script type="text/javascript" src="js/functions.js"></script>
+	    <script type="text/javascript" src="js/about.js"></script>
 	    
 	    <!-- Application Icon -->
 	    <link rel="icon" href="./images/icon.png">	
@@ -58,59 +58,20 @@
 		<div class="container-fluid">
 			<div class="row medium-padding-top">
 				<div class="col-md-3"></div>
-				<div class="col-md-6 card bg-white text-black" style="height: 120px;" id="infoBox">
+				<div class="col-md-6 card bg-white text-black" style="height: 150px;" id="infoBox">
+					<table>
+						<tr>
+							<td><h3>Name</h3></td>
+							<td><h3>Prajodh Aniyeri Valkat</h3></td>
+						</tr>
+						<tr>
+							<td><h3>Number</h3></td>
+							<td><h3>700705338</h3></td>
+						</tr>
+					</table>
 				</div>
 				<div class="col-md-3"></div>
 			</div>	
-			<div class="row small-padding-top">
-				<div class="col-md-3"></div>
-				<div class="col-md-1">
-					<input class="btn btn-light" type="button" id="prevFunctionInfoButton" value="Prev">
-					<input class="btn btn-light" type="button" id="nextFunctionInfoButton" value="Next">	
-				</div>
-				<div class="col-md-3"></div>
-			</div>			
-		</div>
-		</br>
-		<div class="container-fluid medium-padding-top">
-			<div class="row medium-padding-top">
-				<div class="col-md-3"></div>
-				<div class="col-md-6 border rounded small-padding-top-bottom">
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					Select a function type:
-					<select class="selectpicker" id="functionTypesSelect">
-						<option value=""></option>
-					</select>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<span id="selectFunctionSpan">
-					</span>
-					<div class="container-fluid small-padding-top">
-						<table id="functionDetailsTable"></table>
-					</div>
-				</div>
-				<div class="col-md-3"></div>
-			</div>
-		</div>
-		<br/>
-		<br/>
-		<br/>
-		<div class="container-fluid medium-padding-top">
-			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-4" id="functionTryoutInputDiv">
-				</div>
-				<div class="col-md-4"></div>
-			</div>
-			<br/>
-			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-4" id="functionTryoutOutputDiv">
-				</div>
-				<div class="col-md-4"></div>
-			</div>
 		</div>
 	</body>
 </html>
