--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
 			<div class="row">
 				<div class="col-md-2"></div>
 				<div class="col-md-8">
-					Learn a few Javascript functions and AJAX.
+					<h1 class="text-white">Learn a few Javascript functions and AJAX.</h1>
 				</div>
 				<div class="col-md-2"></div>
 			</div>	
@@ -85,10 +85,11 @@
 			</div>				
 			<div class="row">
 				<div class="col-md-2"></div>
-				<div class="col-md-1">Javascritp functions</div>
+				<div class="col-md-1">Javascript functions</div>
 				<div class="col-md-7">
-					Here we look at what are functions in Javascript.</br>
-					We look at functions on two common type of data - String & Arrays
+					This section provides information about functions in Javascript.<br/>
+					It provides details on two common type of data - String & Arrays.<br/>
+					User can try out these functions and check output
 				</div>
 				<div class="col-md-2"></div>
 			</div>		
@@ -103,7 +104,9 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-1">AJAX</div>
 				<div class="col-md-7">
-					Here we cover AJAX using plain Javascript or using JQuery
+					This section provides information about AJAX call and <br/>
+					how to implement these using Vanilla JS/JQuery and XML/JSON<br/>
+					It also provides some basic information on accessing data in the response in each case
 				</div>
 				<div class="col-md-2"></div>
 			</div>		
@@ -118,7 +121,7 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-1">Games</div>
 				<div class="col-md-7">
-					Game to test your reflexes and concentration
+					A simple game to test your reflexes and concentration
 				</div>
 				<div class="col-md-2"></div>
 			</div>		
